[package]
name = "fmtapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "fmtapp"
path = "fmtapp.rs"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
